--- a/NuGet.Config
+++ b/NuGet.Config
@@ -2,6 +2,6 @@
 <configuration>
   <packageSources>
     <add key="BlazoriseMyGet" value="https://www.myget.org/F/blazorise/api/v3/index.json" />
-    <add key="devextreme-controls-netcore" value="D:\Program Files\DevExpress 22.1\DevExtreme\System\DevExtreme\Bin\AspNetCore" />
+    <add key="devextreme-controls-netcore" value="C:\Program Files\DevExpress 22.1\DevExtreme\System\DevExtreme\Bin\AspNetCore" />
   </packageSources>
 </configuration>
