--- a/modules/Module1/src/Module1.Web/Module1.Web.csproj
+++ b/modules/Module1/src/Module1.Web/Module1.Web.csproj
@@ -13,6 +13,7 @@
 
   <ItemGroup>
     <PackageReference Include="DevExpress.Reporting.Core" Version="22.1.4" />
+    <PackageReference Include="DevExtreme.AspNet.Core" Version="22.1.4" />
     <PackageReference Include="Volo.Abp.AutoMapper" Version="5.3.4" />
     <PackageReference Include="Volo.Abp.AspNetCore.Mvc.UI.Theme.Shared" Version="5.3.4" />
   </ItemGroup>
