--- a/modules/Module1/src/Module1.Application/Module1.Application.csproj
+++ b/modules/Module1/src/Module1.Application/Module1.Application.csproj
@@ -8,6 +8,8 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DevExtreme.AspNet.Core" Version="22.1.4" />
+    <PackageReference Include="DevExtreme.AspNet.Data" Version="2.8.6" />
     <PackageReference Include="Volo.Abp.AutoMapper" Version="5.3.4" />
     <PackageReference Include="Volo.Abp.Ddd.Application" Version="5.3.4" />
     <ProjectReference Include="..\Module1.Application.Contracts\Module1.Application.Contracts.csproj" />
