--- a/modules/Module1/src/Module1.EntityFrameworkCore/Module1.EntityFrameworkCore.csproj
+++ b/modules/Module1/src/Module1.EntityFrameworkCore/Module1.EntityFrameworkCore.csproj
@@ -9,6 +9,7 @@
 
   <ItemGroup>
     <PackageReference Include="Volo.Abp.EntityFrameworkCore" Version="5.3.4" />
+    <PackageReference Include="Volo.Abp.EntityFrameworkCore.SqlServer" Version="5.3.4" />
     <ProjectReference Include="..\Module1.Domain\Module1.Domain.csproj" />
   </ItemGroup>
 
