--- a/modules/Module1/src/Module1.Web/Module1.Web.csproj
+++ b/modules/Module1/src/Module1.Web/Module1.Web.csproj
@@ -19,10 +19,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Module1.Application.Contracts\Module1.Application.Contracts.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.FileProviders.Embedded" Version="6.0.5" />
   </ItemGroup>
 
@@ -37,6 +33,10 @@
     <Content Remove="Components\**\*.js" />
     <Content Remove="Components\**\*.css" />
     <Content Remove="wwwroot\**\*.*" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\Module1.Application\Module1.Application.csproj" />
   </ItemGroup>
 
 </Project>
